Update to captions ad heading for PO report heading

--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -35,6 +35,9 @@
       <li>
         content updates following the user research
       </li>
+      <li>
+        simplification of Planning officer’s report section title
+      </li>
     </ul>
 
     {{ govukButton({
