--- a/app/views/manage/questionnaire/v14/po-report/report-upload.html
+++ b/app/views/manage/questionnaire/v14/po-report/report-upload.html
@@ -3,7 +3,7 @@
 {% block questions %}
 
   <span class="govuk-caption-l">
-    Planning officer’s report and relevant policies
+    Planning officer’s report and supporting documents
   </span>
 
   {% if data['non-determination'] == 'true' %}
