--- a/app/views/manage/questionnaire/v14/po-report/community-infrastructure-date.html
+++ b/app/views/manage/questionnaire/v14/po-report/community-infrastructure-date.html
@@ -5,7 +5,7 @@
 {% block questions %}
 
   <span class="govuk-caption-l">
-    Planning officer’s report and relevant policies
+    Planning officer’s report and supporting documents
   </span>
 
   {% if data['community-infrastructure-adopted'] == 'Yes' %}
