--- a/app/views/manage/questionnaire/v14/po-report/other-policies-upload.html
+++ b/app/views/manage/questionnaire/v14/po-report/other-policies-upload.html
@@ -5,7 +5,7 @@
 {% block questions %}
 
   <span class="govuk-caption-l">
-    Planning officer’s report and relevant policies
+    Planning officer’s report and supporting documents
   </span>
 
   <h1 class="govuk-heading-l">
