--- a/app/views/manage/questionnaire/v14/task-list__po-report.html
+++ b/app/views/manage/questionnaire/v14/task-list__po-report.html
@@ -4,7 +4,7 @@
     {% if data['non-determination'] == 'true' %}
       What your decision notice would have said and relevant policies
     {% else %}
-      Planning officer’s report and supplementary documents
+      Planning officer’s report and supporting documents
     {% endif %}
 
     {% if data['po-report-completed'] == 'true' %}
