Service area for the prototype + moving the service messages to the new area

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,7 +29,7 @@
           <a href="appeal/save-and-return/">Save and return</a>
         </li>
         <li>
-          <a href="/appeal/service/">Service messages</a>
+          <a href="/service/status/">Service messages</a>
         </li>
         <li>
           <a href="appeal/more-than-one-appeal/">More than one appeal</a>
