Service feedback example

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -43,6 +43,11 @@
         <li>
           <a href="appeal/withdraw-appeal/">Withdraw an appeal</a>
         </li>
+        <li>
+          <a href="service/feedback/">
+            Service feedback form (example of LPA service feedback)
+          </a>
+        </li>
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
