S78 LPAQ health and safety + environmental statement answer logic

--- a/app/views/manage/questionnaire/v14/env-impact/env-statement-check.html
+++ b/app/views/manage/questionnaire/v14/env-impact/env-statement-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Did the applicant do the environmental statement?' %}
+{% set title = 'Did the applicant submit an environmental statement?' %}
 
 {% block questions %}
 
@@ -8,27 +8,59 @@
     Environmental impact assessment
   </span>
 
-  {{ govukRadios({
-    idPrefix: 'env-statement-check',
-    name: 'env-statement-check',
-    fieldset: {
-      legend: {
-        html: title,
-        classes: 'govuk-fieldset__legend--l',
-        isPageHeading: true
-      }
-    },
-    items: [
-      {
-        html: 'Yes',
-        value: 'Yes',
-        checked: checked('env-statement-check','Yes')
+  {% if data['schedule'] == 'Schedule 1' %}
+
+    {{ govukRadios({
+      idPrefix: 'env-statement-check',
+      name: 'env-statement-check',
+      fieldset: {
+        legend: {
+          html: title,
+          classes: 'govuk-fieldset__legend--l',
+          isPageHeading: true
+        }
       },
-      {
-        html: 'No',
-        value: 'No',
-        checked: checked('env-statement-check','No')
-      }
-    ]
-  }) }}
+      items: [
+        {
+          html: 'Yes',
+          value: 'Yes',
+          checked: checked('env-statement-check','Yes')
+        },
+        {
+          html: 'No',
+          value: 'No',
+          checked: checked('env-statement-check','No')
+        }
+      ]
+    }) }}
+
+  {% else %}
+
+    {{ govukRadios({
+      idPrefix: 'env-statement-check',
+      name: 'env-statement-check',
+      fieldset: {
+        legend: {
+          html: title,
+          classes: 'govuk-fieldset__legend--l',
+          isPageHeading: true
+        }
+      },
+      items: [
+        {
+          html: 'Yes',
+          value: 'Yes',
+          checked: checked('env-statement-check','Yes')
+        },
+        {
+          html: 'No, they have a negative screening direction',
+          value: 'No',
+          checked: checked('env-statement-check','No')
+        }
+      ]
+    }) }}
+
+  {% endif %}
+
+
 {% endblock %}
