--- a/app/views/manage/questionnaire/v14/site-access/health-and-safety.html
+++ b/app/views/manage/questionnaire/v14/site-access/health-and-safety.html
@@ -27,29 +27,29 @@
   </p>
 
   <p class="govuk-!-margin-bottom-2">
-    What you tell us might include:
+    Potential safety risks include:
   </p>
   <ul class="govuk-list govuk-list--bullet">
     <li>
-      there is no, or limited mobile reception
+      no or limited mobile reception
     </li>
     <li>
-      access is blocked
+      areas with blocked access
     </li>
     <li>
-      ladders or other equipment is needed
+      areas that you can only access using ladders or other equipment
     </li>
     <li>
-      site health and safety rules need to be followed (for instance, a hard hat, boots and hi visibility clothing)
+      following site health and safety rules (for example, hard hats, boots and high visibility clothing)
     </li>
     <li>
-      there is livestock or other animals
+      livestock or other animals
     </li>
     <li>
-      there is dangerous debris or overgrown vegetation
+      dangerous debris or overgrown vegetation
     </li>
     <li>
-      there is potentially hazardous material, such as asbestos
+      potentially hazardous material (for example, asbestos)
     </li>
   </ul>
 
