S78 LPAQ content update for scoping opinion check

--- a/app/views/manage/questionnaire/v14/env-impact/scoping-check.html
+++ b/app/views/manage/questionnaire/v14/env-impact/scoping-check.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Did you receive a scoping opinion?' %}
+{% set title = 'Did you issue a scoping opinion?' %}
 
 {% block questions %}
 
