Service pattern links and contact details pattern

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -227,6 +227,19 @@
   <div class="govuk-grid-column-two-thirds">
 
     <h2 class="govuk-heading-m">
+      Design patterns
+    </h2>
+
+    <p class="govuk-body">
+      Identified service patterns and page components used in the appeal service.
+    </p>
+    <p class="govuk-body">
+      <a href="/patterns/">View design patterns</a>
+    </p>
+
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+    <h2 class="govuk-heading-m">
       Prototype archive
     </h2>
 
